# AI-Homework-tutorial

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
eval/: evaluate.py  golden_test_set.json  metrics.py
monitoring/: alerts.yaml  metrics.py  prometheus_config.yaml
src/: app.py  config.py  models.py
src/services/: audio_generator.py  image_processor.py  llm_solver.py  video_generator.py
tests/: test_image_processing.py  test_integration.py  test_latency.py  test_llm_accuracy.py
