[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-homework-tutor"
version = "1.0.0"
description = "Multimodal Learning Assistant for solving homework problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "prometheus-client",
    "google-generativeai",
    "google-cloud-vision",
    "pytesseract",
    "gTTS",
    "manim",
    "ragas",
    "pydantic",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]
